[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts-C/Audio.gd" type="Script" id=1]
[ext_resource path="res://SFX/UI-Quirky_37.ogg" type="AudioStream" id=2]
[ext_resource path="res://SFX/Lady-Gaga-Bad-Romance-_Instrumental_.ogg" type="AudioStream" id=3]
[ext_resource path="res://SFX/Forrozão-Tropykalia.ogg" type="AudioStream" id=4]
[ext_resource path="res://SFX/Toxic-_Instrumental.ogg" type="AudioStream" id=5]
[ext_resource path="res://SFX/DISK-ME-Instrumental-Original-_-Official-™.ogg" type="AudioStream" id=6]

[node name="Audio" type="Node"]
script = ExtResource( 1 )

[node name="Botoes" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0

[node name="BadRomance" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Forrozao" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Toxic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="DISKME" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
[connection signal="finished" from="BadRomance" to="." method="_on_BadRomance_finished"]
[connection signal="finished" from="Forrozao" to="." method="_on_Forrozao_finished"]
[connection signal="finished" from="Toxic" to="." method="_on_Toxic_finished"]
[connection signal="finished" from="DISKME" to="." method="_on_DISKME_finished"]
